syntax = "proto3";

package api.user.v1;

import "google/protobuf/timestamp.proto";
// import "validate/validate.proto";
option go_package = "github.com/zYros90/go-boilerplate-v1/api/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.v1;";

message CreateUserReq {
  string username = 1;
  string password = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
}

message DeleteUserReq {}

message GetUserReq {}

message UserResp {
  string username = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}
